<resources>
    <string name="app_name">TicTacToe Jukša</string>
    <string name="_2_players">2 players</string>
    <string name="computer_starts">Computer starts</string>
    <string name="player_starts">Player starts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_name_for_player1">Choose name for Player1:</string>
    <string name="player1">Player1</string>
    <string name="choose_name_for_player2">Choose name for Player2:</string>
    <string name="player2">Player2</string>
    <string name="start_game">Start Game</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="name">Name</string>
</resources>