<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VardaIzveleDiviem">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_wrapBehaviorInParent="horizontal_only">

        <TextView
            android:id="@+id/textView_p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/choose_name_for_player1"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPlayer1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/player1"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/choose_name_for_player2"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPlayer2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/player2"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:onClick="startGame"
            android:text="@string/start_game" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>