<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpelesVeidaIzvele">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_2p"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:insetTop="6dp"
            android:onClick="chooseName2p"
            android:text="@string/_2_players"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/button_comp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="gameComputer"
            android:text="@string/computer_starts" />

        <Button
            android:id="@+id/button_player"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="gamePlayer"
            android:text="@string/player_starts" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>