<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VardaIzveleVienam">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_wrapBehaviorInParent="horizontal_only"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/textView_onep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/enter_your_name"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPlayer"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_start_onep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="startGame"
            android:text="@string/start_game" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>